--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+@import url('./components/Modal/style.css');
+@import url('./components/StatsList/style.css');
+@import url('./components/CardList/style.css');
+@import url('./components/Card/style.css');
 
 :root {
   --white: #fff;
@@ -117,25 +121,6 @@ textarea.form-input {
   gap: var(--medium-gap);
 }
 
-.stats-list {
-  display: flex;
-  justify-content: space-between;
-  gap: var(--medium-gap);
-}
-
-.stat-item {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 20%;
-  padding: 0.5rem;
-  border: 1px solid var(--light-gray);
-  border-radius: 0.5rem;
-  background-color: var(--white);
-  filter: drop-shadow(2px 2px 16px rgba(0, 0, 0, 0.25));
-}
-
 .search-form {
   display: flex;
   gap: var(--medium-gap);
@@ -166,64 +151,6 @@ textarea.form-input {
 }
 
 .search-button > img {
-  width: 20px;
-  height: 20px;
-}
-
-.card-list {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  gap: var(--large-gap);
-  max-height: 70vh;
-  overflow-y: auto;
-}
-
-.card {
-  display: flex;
-  flex-direction: column;
-  gap: var(--small-gap);
-  padding: 1rem;
-  border: 1px solid var(--light-gray);
-  border-radius: 0.5rem;
-  background-color: var(--white);
-  filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.25));
-}
-
-.card-title {
-  align-self: center;
-}
-
-.card-controls {
-  align-self: flex-end;
-  display: flex;
-  gap: var(--small-gap);
-}
-
-.card-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0.5rem;
-  border: 1px solid var(--black);
-  border-radius: 50%;
-  background-color: var(--white);
-
-  transition: background-color 0.3s;
-}
-
-.button-delete:hover {
-  background-color: red;
-}
-
-.button-edit:hover {
-  background-color: var(--yellow);
-}
-.button-video:hover {
-  background-color: var(--green);
-}
-
-.card-button > img {
   width: 20px;
   height: 20px;
 }
