--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
-@import url('./components/Modal/style.css');
+@import url('./components/Popup/style.css');
 @import url('./components/StatsList/style.css');
 @import url('./components/CardList/style.css');
 @import url('./components/Card/style.css');
