--- a/style.css
+++ b/style.css
@@ -25,11 +25,19 @@
   list-style: none;
 }
 
+html,
+body {
+  max-height: 100vh;
+  max-width: 100vw;
+}
+
 button {
   cursor: pointer;
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   background-color: #f6f7f9;
 }
 
@@ -50,18 +58,18 @@ body {
 .container {
   display: flex;
   gap: var(--large-gap);
-  padding: 2rem 10rem;
+  padding: 1rem 10rem;
 }
 
 .aside-content {
   display: flex;
   flex-direction: column;
   gap: var(--small-gap);
-  min-width: fit-content;
   height: fit-content;
   padding: 0.5rem 2rem;
   background-color: var(--blue);
   color: var(--white);
+  border-radius: 0.5rem;
 }
 
 .aside-form {
