--- a/components/StatsList/style.css
+++ b/components/StatsList/style.css
@@ -16,3 +16,15 @@
   background-color: var(--white);
   filter: drop-shadow(2px 2px 16px rgba(0, 0, 0, 0.25));
 }
+
+@media (max-width: 768px) {
+  .stats-list {
+    gap: var(--small-gap);
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+
+  .stat-item {
+    width: 30%;
+  }
+}
